@@ -5,7 +5,8 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement component registry isolation layer.
+  [jone]
 
 
 1.7.0 (2014-09-30)
